--- a/microsetta_interface/templates/signup_intermediate.jinja2
+++ b/microsetta_interface/templates/signup_intermediate.jinja2
@@ -20,8 +20,9 @@
     <img src="/static/img/old_registration_no_password.jpg" class="resize"/><br/>
     Some cards may also contain a 'Password:' field, which we currently DO NOT require, so please disregard it.<br/>
     <img src="/static/img/old_registration_password.jpg" class="resize"/>
+    </p>
     
        <p>Continue to Sign Up: <br/>
-       <a href="{{authrocket_url}}/signup?redirect_uri={{endpoint}}/authrocket_callback"><button class="btn btn-primary">Sign Up</button></a>. </p>
+       <a href="{{authrocket_url}}/signup?redirect_uri={{endpoint}}/authrocket_callback"><button class="btn btn-primary">Sign Up</button></a></p>
 </div>
 {% endblock %}
