Configurable alpha-metric and taxonomy resource

--- a/microsetta_interface/templates/sample_results.jinja2
+++ b/microsetta_interface/templates/sample_results.jinja2
@@ -14,8 +14,8 @@
 
   <link rel="stylesheet" type="text/css" href="/static/css/4_column_flex.css" />
   <script>
-    let taxonomy = "greengenes";
-    let metric = "faith-pd";
+    let taxonomy = "{{taxonomy}}";
+    let metric = "{{alpha_metric}}";
     let sampleId = "{{sample.sample_id}}";
     var opt = {"renderer": "canvas", "actions": true};  /* Options for the Vega embedding */
 
