ENH use static instead of cdn

--- a/microsetta_interface/templates/sample_results.jinja2
+++ b/microsetta_interface/templates/sample_results.jinja2
@@ -4,13 +4,13 @@
 {% set show_logout = True %}
 
 {% block head %}
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css" />
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
+  <link rel="stylesheet" type="text/css" href="/static/vendor/css/jquery.dataTables.css" />
+  <script type="text/javascript" charset="utf8" src="/static/vendor/js/jquery.dataTables.js"></script>
 
   <!-- vega header(s) -->
-  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+  <script src="/static/vendor/js/vega@5"></script>
+  <script src="/static/vendor/js/vega-lite@4"></script>
+  <script src="/static/vendor/js/vega-embed@6"></script>
 
   <link rel="stylesheet" type="text/css" href="/static/css/4_column_flex.css" />
   <script>
