--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -29,6 +29,7 @@
     <nav class="navbar fixed-top navbar-light bg-warning">
       Administrator Toolbar
       <a class="btn btn-outline-success" href="/admin/system_message">System Panel</a>
+      <a class="btn btn-outline-success" href="/admin/emperor_playground">Emperor Playground</a>
       <form class="form-inline" action="/admin/account_search" method="get">
         <input id="email_query" name="email_query" class="form-control mr-sm-2" type="search" placeholder="User Email" aria-label="Search"/>
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Find Account</button>
