Adds a metadata category for the user's sample, and sets default color and scale of the emperor plot to highlight the user's sample

--- a/microsetta_interface/templates/emperor.jinja2
+++ b/microsetta_interface/templates/emperor.jinja2
@@ -35,7 +35,8 @@
           function(){
             button.disabled = false
             button.innerText="Go!"
-          }
+          },
+          "{{user_sample_id}}"
         );
       }
 
