--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -43,34 +43,34 @@
 {% endblock %}
 {% block breadcrumb %}
     {% if not CREATE_ACCT %}
-    <li class="breadcrumb-item"><a href="/accounts/{{account.account_id}}">Account</a></li>
+    <li class="breadcrumb-item"><a href="/accounts/{{account.account_id}}">Profile</a></li>
     {% endif %}
-    <li class="breadcrumb-item active" aria-current="page">Account Details</li>
+    <li class="breadcrumb-item active" aria-current="page">Profile Details</li>
 {% endblock %}
 {% block content %}
 <div class="card">
-    <h5 class="card-header">Account Details</h5>
+    <h2 class="card-header">Profile Details</h2>
     <div class="card-body">
         <form id="acct_form" name="acct_form" method="post">
             <div class="form-group">
-                <label for="email" name="email_label">Email/Correo electrónico</label>
+                <label for="email" name="email_label">Email/Correo electrónico*</label>
                 <input id="email" name="email" class="form-control" type="hidden" value="{{account.email |e}}"/>
                 <input id="view_email" name="view_email" class="form-control" type="email" value="{{account.email |e}}" disabled="disabled" readonly/>
             </div>
             <div class="form-group">
-                <label for="first_name" name="first_name_label">First Name/Nombre</label>
+                <label for="first_name" name="first_name_label">First Name/Nombre*</label>
                 <input id="first_name" name="first_name" class="form-control" value="{{account.first_name |e}}" type="text" />
             </div>
             <div class="form-group">
-                <label for="last_name" name="last_name_label">Last Name/Nombre de Familia</label>
+                <label for="last_name" name="last_name_label">Last Name/Nombre de Familia*</label>
                 <input id="last_name" name="last_name" class="form-control" value="{{account.last_name |e}}" type="text" />
             </div>
             <div class="form-group">
-                <label for="street" name="street_label" >Street Address/Dirección</label>
+                <label for="street" name="street_label" >Street Address/Dirección*</label>
                 <input id="street" name="street" class="form-control" value="{{account.address.street |e}}" type="text" />
             </div>
             <div class="form-group">
-                <label for="city" name="city_label">City/Ciudad</label>
+                <label for="city" name="city_label">City/Ciudad*</label>
                 <input id="city" name="city" class="form-control" value="{{account.address.city |e}}" type="text" />
             </div>
             <div class="form-group">
@@ -78,7 +78,7 @@
                 <strong>Note to non-US users:</strong> We are working on support for additional countries and
                 expect to have that available soon.
                 </p>
-                <label for="state" name="state_label">State/Estado</label>
+                <label for="state" name="state_label">State/Estado*</label>
 
                 {% set US_STATES = [
                     ("CA", "California"),
@@ -141,20 +141,20 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="post_code" name="post_code_label">Zip Code/Código Postal</label>
+                <label for="post_code" name="post_code_label">Zip Code/Código Postal*</label>
                 <input id="post_code" name="post_code" class="form-control" value="{{account.address.post_code |e}}" type="text" />
             </div>
             {% if CREATE_ACCT %}
             <div class="form-group">
-                <label for="kit_name" name="kit_name_label">Kit ID/ID del kit</label>
+                <label for="kit_name" name="kit_name_label">Kit ID/ID del kit*</label>
                 <input id="kit_name" name="kit_name" class="form-control" type="text"/>
             </div>
             {% endif %}
             <input id="country_code" name="country_code" type="hidden" value="{{account.address.country_code |e}}"/>
             {% if CREATE_ACCT %}
-            <button type="submit" class="btn btn-primary">Create Account</button>
+            <button type="submit" class="btn btn-primary">Save Profile</button>
             {% else %}
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary">Save Profile</button>
             {% endif %}
         </form>
     </div>
