--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1,3 +1,11 @@
+------------/* Colors */------------
+
+:root {
+  --Body: #212529;
+  --link: #0000ff;
+  --error: #FC8900;
+}
+
 ------------/* Text Styles */------------
 h1 {
   font-size: 2.25rem;
@@ -44,11 +52,8 @@ a {
   line-height: 2;
 }
 
-------------/* Colors */------------
-
-:root {
-  --Body: #212529;
-  --link: #0000ff;
+label.error {
+    color: var(--error);
 }
 
 ------------/* Body */------------
