--- a/microsetta_interface/templates/sample_results.jinja2
+++ b/microsetta_interface/templates/sample_results.jinja2
@@ -82,7 +82,7 @@
           var sample_type = "oral"
           if ("{{sample.site}}" == "Stool")
             sample_type="fecal"
-          var url = '{{public_endpoint}}/plotting/diversity/beta/' + beta_metric + '/pcoa/' + sample_type + '/emperor?metadata_categories=age_cat&metadata_categories=bmi_cat&metadata_categories=latitude';
+          var url = '{{public_endpoint}}/plotting/diversity/beta/' + beta_metric + '/pcoa/' + sample_type + '/emperor?metadata_categories=age_cat&metadata_categories=bmi_cat';
 
           loadEmperor(
             url,
@@ -166,6 +166,21 @@
     <div id="vis"></div>
   </div>
 </div>
-<div id='emperor-notebook' style="position: relative; width:100%; height:500px;">
-</div>
+    <div class="column" style="text-align: center">
+    <h3>Beta Diversity</h3>
+    <br>
+    <p>Here we display how your sample fits in among the other samples
+    of The Microsetta Initiative in terms of shared microbes. There are many
+    ways to calculate beta diversity, differing in how to weight the distance
+    between any two microbes. We take evolutionary distance into account with
+    the metric displayed here, known as Unweighted Unifrac. You can
+    find an overview of this metric
+    <a href="https://en.wikipedia.org/wiki/UniFrac" target="_blank">here</a> or
+    better understand its derivation
+    <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1828774/" target="_blank">here</a>.
+    This computation is performed with <a href="https://qiime2.org" target="_blank">QIIME 2</a>, and
+    more information on it can be found in the alpha and beta diversity
+    <a href="https://docs.qiime2.org/2020.6/tutorials/moving-pictures/#alpha-and-beta-diversity-analysis" target="_blank">sections</a> of the QIIME 2 tutorial.</p>
+    <div id='emperor-notebook' style="position: relative; width:100%; height:500px;"></div>
+  </div>
 {% endblock %}
