--- a/microsetta_interface/templates/sample_results.jinja2
+++ b/microsetta_interface/templates/sample_results.jinja2
@@ -76,7 +76,7 @@
 
     $(document).ready(
         function() {
-          createDataTable();
+          createDataTable()();
           createAlphaPlot();
 
           var sample_type = "oral"
