--- a/microsetta_interface/templates/create_nonhuman_source.jinja2
+++ b/microsetta_interface/templates/create_nonhuman_source.jinja2
@@ -13,7 +13,7 @@
         <form method="post" name="new_source_form" action="/accounts/{{account_id}}/create_nonhuman_source/">
             <div class="form-group">
                 <label for="source_name" name="source_name_label">Environment name (e.g., microwave):</label>
-                <input id="source_name" name="source_name" class="form-control" type="text"/>
+                <input id="source_name" name="source_name" class="form-control" type="text" required/>
                 <input id="source_type" name="source_type" type="hidden" value="environmental" />
                 <br />
                 <label for="source_description" name="source_description_label">Environment description (optional):</label>
