--- a/microsetta_interface/templates/email_confirmation.jinja2
+++ b/microsetta_interface/templates/email_confirmation.jinja2
@@ -30,7 +30,7 @@
             <li>Email wrong or didn't receive an email? <a href="{{ authrocket_url }}/profile">Go to your AuthRocket Profile &rarr;</a> to update your email or resend a verification email.</li>
         </ul>
         <h4>
-            <strong>You can close this browser tab!</strong> On email verification, a new tab will automatically open showing your account details.
+            <strong>You can close this browser tab!</strong> After email verification, a new tab will automatically open, and you will proceed with filling out your profile details.
         </h4>
         &nbsp;&nbsp;
     </div>
