--- a/microsetta_interface/templates/account_overview.jinja2
+++ b/microsetta_interface/templates/account_overview.jinja2
@@ -21,10 +21,17 @@
   text-align: center;
 }
 
+.info-col {
+  min-width: 277.5px;
+}
 .info-card {
-  border-radius: 4px;
   border: solid 1px var(--forms_cards_outsideborder);
   background-color: var(--pi-jumbotron-bg);
+  min-width: 200px;
+}
+
+.source-card {
+  min-width: 200px;
 }
 
 .info-text {
@@ -113,59 +120,54 @@
 <br>
 <div class="source selection container">
     <div class="row">
-        <div class="col-3">
-            <div class="card bg-light mb-3 info-card">
-                <div class="card-body">
-                    <p class="info-text">Our lab needs to know what type of sample(s) you are submitting (a.k.a. the “source”). Add a new source and assign samples to it so we can perform the correct analysis in our laboratory </p>
-                </div>
-            </div>
-            <div class="card bg-light info-card">
-                <div class="card-body">
-                    <p class="info-text">If you have multiples sources, you may add one source at a time. You can return to this page after you finish registering the first one.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-9">
         <div class="card-deck h-100">
-            <div class="card" id="human-source">
+            <div class="card info-col border-0 mb-3">
+                <div class="card bg-light mb-3 info-card">
+                    <div class="card-body">
+                        <p class="info-text">Our lab needs to know what type of sample(s) you are submitting (a.k.a. the “source”). Add a new source and assign samples to it so we can perform the correct analysis in our laboratory </p>
+                    </div>
+                </div>
+                <div class="card bg-light info-card">
+                    <div class="card-body">
+                        <p class="info-text">If you have multiple sources, you may add one source at a time. You can return to this page after you finish registering the first one.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card source-card mb-3" id="human-source">
                 <img src="/static/img/source_human.png" class="card-img-top card-img mx-auto my-3" alt="..."/>
                 <div class="card-title center-text">Human Source</div>
                 <div class="card-body">
-                    <ul>
-                        <li>Collect sample(s) from <b>yourself</b> (e.g. fecal, saliva, skin prick, etc.)</li>
-                        <li>Collect sample(s) from <b>someone else</b> (fecal, saliva, skin, prick, etc.)</li>
-                    </ul>
+                    Collect sample(s) from <b>yourself</b> (e.g. fecal, saliva, skin prick, etc.)
+                    <br/>
+                    Collect sample(s) from <b>someone else</b> (fecal, saliva, skin, prick, etc.)
                 </div>
                 <div class="card-footer d-flex justify-content-center">
                     <a class="btn btn-primary btn-lg" href="/accounts/{{ account.account_id }}/create_human_source" role="button">Select</a>
                 </div>
             </div>
-            <div class="card" id="environmental-source">
+            <div class="card source-card mb-3" id="environmental-source">
                 <img src="/static/img/source_environmental.png" class="card-img-top card-img mx-auto my-3" alt="..."/>
                 <div class="card-title center-text">Environmental Source</div>
                 <div class="card-body">
-                    <ul>
-                        <li>Collect sample(s) from a <b>surface</b> (e.g. kitchen counter, backyard soil, food, etc.)</li>
-                    </ul>
+                    Collect sample(s) from a <b>surface</b> (e.g. kitchen counter, backyard soil, food, etc.)
                 </div>
                 <div class="card-footer d-flex justify-content-center">
                     <a class="btn btn-primary btn-lg" href="/accounts/{{ account.account_id }}/create_nonhuman_source" role="button">Select</a>
                 </div>
             </div>
-            <div class="card" id="animal-source">
+            <div class="card source-card mb-3" id="animal-source">
                 <img src="/static/img/source_animal.png" class="card-img-top card-img mx-auto my-3" alt="..."/>
                 <div class="card-title center-text">Animal Source</div>
-                <div class="card-body d-flex flex-column"">
-                    <ul>
-                        <li>Collect sample(s) from <b>your pet</b> or an <b>animal</b> (e.g. fecal, oral, skin, etc.)</li>
-                    </ul>
+                <div class="card-body d-flex flex-column">
+                    <div>
+                        Collect sample(s) from <b>your pet</b> or an <b>animal</b> (e.g. fecal, oral, skin, etc.)
+                    </div>
                     <div class="mt-auto"><i class="align-self-end">Animal sources are currently unavailable.</i></div>
                 </div>
                 <div class="card-footer d-flex justify-content-center">
                     <a class="btn btn-primary btn-lg disabled" href="#" role="button">Select</a>
                 </div>
             </div>
-        </div>
         </div>
     </div>
 </div>
