--- a/microsetta_interface/templates/home.jinja2
+++ b/microsetta_interface/templates/home.jinja2
@@ -18,10 +18,10 @@
 
 {% block content %}
     <div class="row">
-      <div class="col-8 text-center how_it_works">
+      <div class="col-12 col-lg-8 text-center how_it_works">
           <img src="/static/img/how-it-works.svg" class="img-fluid" />
       </div>
-      <div class="col-4 text-center" style="background: white;">
+      <div class="col-12 col-lg-4 text-center" style="background: white;">
           <div class="row h-25"></div>
           <div class="row h-50">
               <div class="col d-flex flex-column">
