--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -1,6 +1,6 @@
 {% extends "sitebase.jinja2" %}
 {% set page_title = "Account Samples" %}
-{% set show_breadcrumbs = True %}
+{% set show_breadcrumbs = False %}
 {% block head %}
     <link rel="stylesheet" href="/static/vendor/font-awesome-4.7.0/css/font-awesome.min.css"/>
     <script src="/static/vendor/js/jquery.form-4.2.2/jquery.form.min.js"></script>
@@ -45,11 +45,11 @@
                         let sample_id = samples[i].sample_id;
                         let item = $('<div class="container list-group-item">' +
                                      '<div class="row">' +
-                                     '<div class="col-sm">' +
-                                     '<label for="' + bc + '">' + bc + '</label>' +
-                                     '</div>' +
-                                     '<div class="col-sm">' +
+                                     '<div class="col-1">' +
                                      '<input type="checkbox" name="sample_id" id="' + bc + '" value="' + sample_id + '"/>' +
+                                     '</div>' +
+                                     '<div class="col-11">' +
+                                     '<label for="' + bc + '">' + bc + '</label>' +
                                      '</div>' +
                                      '</div>');
                         $(samples_selector).append(item);
@@ -120,9 +120,9 @@
             preclude_whitespace('#kit_name');
 
             let kit_validation_setup_func = make_kit_validation_setup_func(form_name, kitSubmitHandler);
-            kit_validation_setup_func()
+            kit_validation_setup_func();
             {% for sample in samples %}
-                addButtonIfData("{{ sample.sample_id }}", "{{ sample.sample_barcode }}")
+                addButtonIfData("{{ sample.sample_id }}", "{{ sample.sample_barcode }}");
             {% endfor %}
         });
     </script>
@@ -205,29 +205,37 @@
     <hr style="border-top: dotted 1px"/>
     {% endif %}
     <form method="get" name="list_kit_form" action="/list_kit_samples">
-        <div class="form-group">
+        <h3>Link Samples to Source "{{ source_name }}"</h3>
+        <div class="form-group form-inline">
+            <label for="kit_name" name="kit_name_label">Kit ID:</label>&nbsp;&nbsp;
             {% if claim_kit_name_hint is not none %}
-            <label for="kit_name" name="kit_name_label">The kit ID used to create your account has unclaimed samples. To claim samples from this kit, please click "List samples". To claim samples from another kit ID, please enter it here and then click "List Samples":</label>
             <input id="kit_name" name="kit_name" class="form-control" type="text" value="{{ claim_kit_name_hint }}"/>
             {% else %}
-            <label for="kit_name" name="kit_name_label">To add samples, please enter a kit ID here:</label>
             <input id="kit_name" name="kit_name" class="form-control" type="text"/>
             {% endif %}
          </div>
-        <input type="submit" class="btn btn-primary" value="List Samples"/>
+        <input type="submit" class="btn btn-primary" value="GET STARTED"/>
     </form>
     <p></p>
     <div class="panel-collapse collapse" id="choose_sample_div">
-        <div class="card card-body">
-            Select all samples that should be associated with this source
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <div class="card card-body">
+                    <p class="card-text">
+                    Check that the barcode numbers below match with your collection devices.
+                    <br />
+                    <br />
+                    Select all the samples that you want to add to <strong>{{source_name}}</strong> by clicking the checkbox, then clicking “Link Selected Samples”.
+                    </p>
                     <form method="post" name="pick_samples_form" action="/accounts/{{account_id}}/sources/{{source_id}}/claim_samples">
-                <div class="form-group">
-                    <div id="samples" class="list-group">
-                    </div>
-                    <p></p>
-                    <input type="submit" class="btn btn-primary" value="Claim Selected Samples"/>
+                        <div class="form-group">
+                            <div id="samples" class="list-group"></div>
+                            <p></p>
+                            <input type="submit" class="btn btn-primary" value="LINK SELECTED SAMPLES"/>
+                        </div>
+                    </form>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
     {% if surveys|length > 0 %}
