--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -92,7 +92,7 @@
     {% if show_breadcrumbs %}
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/home">Home</a></li>
+            <!--<li class="breadcrumb-item"><a href="/home">Home</a></li>-->
             {%block breadcrumb%}
             {%endblock%}
           </ol>
