--- a/microsetta_interface/templates/sample_results.jinja2
+++ b/microsetta_interface/templates/sample_results.jinja2
@@ -79,7 +79,7 @@
           createAlphaPlot();
 
           var sample_type = "oral"
-          if ("{{sample.site}}" == "Stool")
+          if ("{{sample.sample_site}}" == "Stool")
             sample_type="fecal"
           var url = '{{public_endpoint}}/plotting/diversity/beta/' + beta_metric + '/pcoa/' + sample_type + '/emperor?metadata_categories=age_cat&metadata_categories=bmi_cat';
 
